Bharattech/Integrated/Integrated/huly/huly-selfhost/kube/collaborator/collaborator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: collaborator
  name: collaborator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collaborator
  template:
    metadata:
      labels:
        app: collaborator
    spec:
      containers:
        - env:
            - name: ACCOUNTS_URL
              value: http://account
            - name: STATS_URL
              value: http://stats
            - name: COLLABORATOR_PORT
              value: "3078"
            - name: STORAGE_CONFIG
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: STORAGE_CONFIG
            - name: SECRET
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: SERVER_SECRET
          image: hardcoreeng/collaborator:v0.7.426
          name: collaborator
          ports:
            - containerPort: 3078
          resources:
            limits:
              memory: '512M'
      restartPolicy: Always
